Added current order styles

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
 <body>
     <header>
-        <h1>Diego's Tacos</h1>
-        <h3>The best tacos in town</h3>
+        <h1 class="title">Diego's Tacos</h1>
+        <h3 class="title">The best tacos in town</h3>
     </header>
 
     <main>
@@ -27,8 +27,12 @@
 
         <div id="order">
             <!--Order elements here-->
-    
-        </div>
+            <h2 class="order-title">Your order</h2>
+            <div class="order-line">
+                <h3>Taco</h3>
+                <p class="remove-btn">Remove</p>
+                <h3 class="price">$15</h3>
+            </div>
 
     </main>
 
