Edited title name

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
     <!-- Google font end-->
-    <title>Diego's Diner</title>
+    <title>Diego's Tacos</title>
 </head>
 
 <body>
@@ -30,7 +30,7 @@
             <h2 class="order-title">Your order</h2>
             <div class="order-line">
                 <h3>Taco</h3>
-                <p class="remove-btn">Remove</p>
+                <p class="remove-btn" data-remove-btn>Remove</p>
                 <h3 class="price">$15</h3>
             </div>
 
@@ -46,7 +46,7 @@
 
 
 
-    <script src="/main.js" defer type="module"></script>
+    <script src="main.js" defer type="module"></script>
 </body>
 
 </html>
