Title name change

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
     <!-- Google font end-->
-    <title>Diego's Tacos</title>
+    <title>Diego's Cantina</title>
 </head>
 
 <body>
     <header>
-        <h1 class="title">Diego's Tacos</h1>
+        <h1 class="title">Diego's Cantina</h1>
         <h3 class="title">The best tacos in town</h3>
     </header>
 
