Added total price function and styles

--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
             <!--Order elements here-->
             </div>
 
+        <div id="order-total">
+            
+        </div>    
     </main>
 
 
