added pay now button

--- a/index.html
+++ b/index.html
@@ -31,8 +31,17 @@
             </div>
 
         <div id="order-total">
-            
+            <!--Order total elements-->
         </div>    
+
+        <!--<div class="modal" id="modal">
+            <form id="pay-form">
+                <input type="text" placeholder="Full name" required>
+                <input type="number" placeholder="Card number" required>
+                <input type="number" placeholder="CVV code" required>
+            </form>
+
+        </div>-->
     </main>
 
 
