--- a/index.html
+++ b/index.html
@@ -28,20 +28,27 @@
 
         <div id="order">
             <!--Order elements here-->
-            </div>
+        </div>
 
         <div id="order-total">
             <!--Order total elements-->
-        </div>    
+        </div>
 
-        <!--<div class="modal" id="modal">
-            <form id="pay-form">
-                <input type="text" placeholder="Full name" required>
-                <input type="number" placeholder="Card number" required>
-                <input type="number" placeholder="CVV code" required>
-            </form>
+        <div class="modal" id="modal">
+            <div class="modal-inner" id="modal-inner">
+                <h2 class="modal-title">Almost Done!</h2>
+                <form class="pay-form" id="pay-form">
+                    <input type="text" placeholder="Full name" required>
+                    <input type="number" placeholder="Card number" required>
+                    <input type="number" placeholder="CVV code" required>
 
-        </div>-->
+                    <div class="modal-btns">
+                        <button class="choice go-back" id="go-back" type="button">Go back</button>
+                        <button class="choice pay" type="submit">Pay</button>
+                    </div>
+                </form>
+            </div>
+        </div>
     </main>
 
 
