Timeout functions and more styling to pay modal

--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
             <div class="modal-inner" id="modal-inner">
                 <h2 class="modal-title">Almost Done!</h2>
                 <form class="pay-form" id="pay-form">
-                    <input type="text" placeholder="Full name" required>
-                    <input type="number" placeholder="Card number" required>
-                    <input type="number" placeholder="CVV code" required>
+                    <input type="text" placeholder="Full name" name="fullName" required>
+                    <input type="number" placeholder="Card number" name="cardNumber" required>
+                    <input type="number" placeholder="CVV" name="cardCvv" required>
 
                     <div class="modal-btns">
                         <button class="choice go-back" id="go-back" type="button">Go back</button>
