--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                 <h2 class="modal-title">Almost Done!</h2>
                 <form class="pay-form" id="pay-form">
                     <input type="text" placeholder="Full name" name="fullName" required>
-                    <input type="number" placeholder="Card number" name="cardNumber" required>
-                    <input type="number" placeholder="CVV" name="cardCvv" required>
+                    <input type="number" placeholder="Card number" name="cardNumber" maxlength="16" oninput="this.value=this.value.slice(0,this.maxLength)" required>
+                    <input type="number" placeholder="CVV" name="cardCvv" maxlength="4" oninput="this.value=this.value.slice(0,this.maxLength)" required>
 
                     <div class="modal-btns">
                         <button class="choice go-back" id="go-back" type="button">Go back</button>
